--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^4.5.1
   flutter_time_picker_spinner: ^2.0.0
   sqflite: ^2.4.1
+  wave_divider: ^0.0.3
 
 dev_dependencies:
   flutter_test:
